# claude-watcher

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  docker.yml
docs/adr/: 0001-initial-architecture.md
src/claude_watcher/: __init__.py  config.py  delivery.py  differ.py  fetcher.py  main.py  summarizer.py
tests/: test_config.py  test_delivery.py  test_differ.py  test_fetcher.py  test_summarizer.py
