[project]
name = "claude-watcher"
version = "0.1.0"
description = "Self-hosted documentation watcher for Claude Code — polls, diffs, summarizes, delivers"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28",
    "anthropic>=0.52",
    "aiosmtplib>=3.0",
    "structlog>=25.1",
    "apscheduler>=3.11,<4",
    "pydantic-settings>=2.8",
]

[project.scripts]
claude-watcher = "claude_watcher.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-httpx>=0.35",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_watcher"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
